--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,8 @@
 services:
   # WebAPIサーバーコンテナ
   api:
-    build: ./app  # Dockerfileでビルド
+    build: ./api  # Dockerfileでビルド
+    image: puzzle-api
     volumes:
       - ./api/src/:/var/www/                          # Laravelディレクトリ
     ports:
